# box

./: .gitignore  README.md
aoc/: README.md
aoc/2024/rss/: Cargo.toml  README.md
aoc/2024/rss/src/: day_one.rs  main.rs
cutebrain/: README.md  private-build-plans.toml
dots/: README.md
dots/bash/: .linkrfile  bashrc  core
dots/emacs/: .linkrfile  README.md  custom.el  init.el
dots/ghostty/: .linkrfile  config
dots/kanshi/: README.md  kanshi.service
dots/kanshi/thinkbook-13x-gen4/: config
dots/niri/: .linkrfile  README.md  config.kdl
dots/starship/: .linkrfile  starship.toml
iosevka-fonts/: README.md  private-build-plans.toml
linkr/: Makefile  README.md  default.nix  pyproject.toml  setup.py  shell.nix
linkr/src/: linkr.py
linkr/src/linkr/: main.py
nix/: README.md
nix-overlay/: .linkrfile  README.md  overlay.nix
nix/overlay/: README.md  default.nix
nix/pkgs/: linkr.nix
penrose-fonts/: README.md  build.py  private-build-plans.toml
theme/: README.md  theme.txt
theme/ghostty/: lostbit-high-contrast
