[project]
name = "linkr"
version = "0.0.1"
authors = [
   { name = "lostbit", email="git@alostbit.com" },
]
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "click==8.2.1"
]

[project.optional-dependencies]
dev = [
    "ruff~=0.12.9",
    "build~=1.3.0",
    "pytest~=8.4.1",
    "pytest-cov~=6.2.1",
]

[project.scripts]
linkr = "linkr.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkr"]

[tool.ruff]
# Set the target Python Version
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
exclude = [".venv/", "dist/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
